Fix DataLabel text align

--- a/src/assets/styles/_labels.scss
+++ b/src/assets/styles/_labels.scss
@@ -33,6 +33,7 @@
   &__value {
     font-size: 1.3em;
     font-weight: bold;
+    flex-grow: 1;
 
     &-container {
       display: flex;
